<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving BT-Remote.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">No receivers found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect-Secure</string>
    <string name="insecure_connect">Connect-Unsecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="settings">Settings</string>

    <!-- SettingsActivity -->
    <!-- prefence keys, no translation needed -->
    <string name="prefkey_machine_name">prefkey_machine_name</string>
    <string name="prefkey_cmd_delay">prefkey_cmd_delay</string>
    <string name="prefkey_cmd_pwm">prefkey_cmd_pwm</string>
    <string name="prefkey_show_rec_armed">prefkey_show_rec_armed</string>
    <string name="prefkey_show_rec_mute">prefkey_show_rec_mute</string>
    <string name="prefkey_show_play_rev">prefkey_show_play_rev</string>
    <string name="prefkey_rec_stdby_mode">prefkey_rec_stdby_mode</string>

    <string name="rec_stdby_mode">REC Standby mode:</string>
    <string name="rec_stdby_mode_summary">Select Rec Standby mode</string>

    <string name="rec_not_armed">REC button not armed!</string>
    <string name="bt_enable_prompt">Please enable Bluetooth in the settings of your phone</string>
    <string name="pref_category_general">General:</string>
    <string name="pref_category_receiver_config">Receiver config:</string>
    <string name="pref_machine_name_summary">Enter the name of your machine</string>
    <string name="pref_delay_summary">Enter button press duration (1-255ms)</string>
    <string name="pref_delay_default_value">100</string>
    <string name="pref_delay_title">100</string>
    <string name="pref_pwm_summary">Set the brightness of LED (0-100%)</string>
    <string name="pref_pwm_default_value">100</string>
    <string name="pref_pwm_title">100</string>
</resources>
